updated some code but having issues with usestate re-renders being behind

--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,4 @@
+div#guess.hidden {
+    visibility: hidden;
+}
 
